--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "build:types": "tsc",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -85,11 +86,12 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/d3-axis": "^3.0.6",
     "@types/d3-scale": "^4.0.8",
-    "@types/d3-selection": "^3.0.10",
+    "@types/d3-selection": "^3.0.11",
     "@types/d3-shape": "^3.1.6",
     "@types/d3-time": "^3.0.3",
     "@types/d3-time-format": "^4.0.3",
     "@types/d3-zoom": "^3.0.8",
+    "@types/minimatch": "^6.0.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -109,6 +111,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.5.3",
+    "terser": "^5.44.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vite-plugin-dts": "^3.6.3",
