chore: add release workflow with version management and changelog
Add comprehensive release management workflow:
- Create /release Claude command for guided release process
- Add release scripts to package.json (release:check, version:*)
- Document release workflow in CLAUDE.md with SemVer guidelines
- Support dry-run npm publish with manual final step

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-powertimeline",
+  "name": "react-powertimeline",
   "version": "0.1.0",
   "description": "High-performance, interactive React component for visualizing multi-layered time-series data",
   "type": "module",
